@@ -76,6 +76,7 @@ t/corpus/badkey_6.txt
 t/corpus/badkey_7.txt
 t/corpus/badkey_8.txt
 t/corpus/badkey_9.txt
+t/corpus/badkey_10.txt
 t/corpus/goodkey_1.txt
 t/corpus/goodkey_2.txt
 t/corpus/goodkey_3.txt
