@@ -1,0 +1,22 @@
+DKIM-Signature: v=1; a=rsa-sha1; c=simple; d=messiah.edu; h=from:to:subject:date:message-id; q=dns/txt; s=test5; i=jlong@subdomain.messiah.edu; bh=a1tsxn+Nkk390KsMynntsb/bycM=; b=OJLajmX/ndyDwjAAC6e1fElkVLoKBJivp5cFoOT2UrW2Pqs5zRZLjsE6+QkxcnBySL9g4l2/EYVMidhg1iXo9g==
+Received: from x.y.test
+   by example.net
+   via TCP
+   with ESMTP
+   id ABC12345
+   for <mary@example.net>;  21 Nov 1997 10:05:43 -0600
+Received: from machine.example by x.y.test; 21 Nov 1997 10:01:22 -0600
+From: Jason Long <jlong@messiah.edu>
+To: Nobody <nobody@messiah.edu>
+Subject: dkim test (i= using subdomain, should fail)
+Date: Wed, 7 Dec 2005 09:11:00 -0500
+Message-ID: <20051207091100@test.messiah.edu>
+
+This is a test
+  More lines here
+
+
+Blah  blah  blah
+
+
+
